[package]
name = "aqui"
version = "0.1.0"
authors = ["Joel Edwards <joeledwards@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
colored = "1.9.2"
serde_json = "1.0.46"
stopwatch = "0.0.7"
surf = "1.0.3"
tokio = "0.2.11"
