[package]
name = "aqui"
version = "0.1.0"
authors = ["Joel Edwards <joeledwards@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3" # Argument parser
colored = "2.0.0" # Terminal colors
serde_json = "1.0.67" # JSON parser
stopwatch = "0.0.7" # Timer
surf = "1.0.3" # HTTP framework
hyper = "0.14.12" # HTTP framework
tokio = "1.11.0" # Async I/O runtime
