[package]
name = "aqui"
version = "0.1.0"
authors = ["Joel Edwards <joeledwards@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33" # Argument parser
colored = "^2" # Terminal colors
serde_json = "^1" # JSON parser
stopwatch = "^0.0.7" # Timer
surf = "^1" # HTTP framework
hyper = { version = "^0.14", features = ["full"] } # HTTP framework
tokio = { version = "^1", features = [ "full" ] } # Async I/O runtime

